tests/paczka1/small_fuzzy/14778034.err
Error in line 4: fbxuco86KM A381 81,2
Error in line 12: 6FHJiNAMr S320 25,8
